# MultiPaste

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
include/multipaste/: core.hpp
installer/: MultiPaste.iss
src/: core.cpp  main.cpp
tests/: core_tests.cpp  release_config_tests.ps1
